fix: fixed margins, gap

--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -4,7 +4,8 @@
     &__title {
         font-size: var(--title-lg);
         line-height: 151%;
-        width: 69.173%;
+        max-width: 819px;
+        margin-bottom: 139px;
     }
 
     .row-items {
@@ -18,6 +19,7 @@
 
     &__items {
         gap: 24px;
+        row-gap: 80px;
         display: flex;
         align-items: stretch;
         flex-wrap: wrap;
@@ -28,7 +30,6 @@
         width: calc(33.333% - 24px);
         display: flex;
         flex-direction: column;
-        height: auto;
     }
 
     &__item-img {
@@ -43,31 +44,30 @@
 
     &__item-title {
         display: flex;
-        flex: 1 1 auto;
-        height: 100%;
         margin-top: 31px;
         font-size: var(--title-md);
-        width: 56.943%;
+        max-width: 216px;
     }
 
     &__item-text {
         margin-top: 31px;
         font-size: var(--title-sm);
-        width: 68.545%;
     }
 }
 
 @media (max-width: 1024px) {
     .advantages {
         &__title {
-            width: 69.173%;
             line-height: 151%;
+            margin-bottom: 100px;
         }
 
-        .row-items {
-            margin-top: 60px;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: auto;
+        &__item {
+            width: calc(50% - 9px);
+        }
+
+        &__items {
+            row-gap: 24px;
             gap: 18px;
         }
     }
@@ -75,14 +75,37 @@
 
 @media (max-width: 768px) {
     .advantages {
+
+        &__title {
+            margin-bottom: 30px;
+        }
+
         &__item-title {
+            margin-top: 15px;
             font-size: var(--text-md);
-            width: 70.943%;
         }
 
         &__item-text {
+            margin-top: 10px;
             font-size: var(--text-sm);
         }
 
+    }
+}
+
+@media (max-width:420px){
+    .advantages {
+        &__item {
+            width: 100%;
+        }
+
+        &__item-img {
+            max-height: 210px;
+
+            img {
+                height: 100%;
+                object-fit: cover;
+            }
+        }
     }
 }
